fix: typing really long numbers will not longer overflow from screen

--- a/scr/style.css
+++ b/scr/style.css
@@ -84,8 +84,10 @@ button:active {
 .result {
   padding: 10px;
   text-align: right;
-  height: 40px;
+  min-height: 40px;
+  height: fit-content;
   width: 300px;
+  word-wrap: break-word;
 
 }
 
